@@ -1,7 +1,11 @@
 v2.10.0
-  * Added doc to method_tracer API and removed second arg
+  * add method untrace_execution(&block) to execute a block without
+    capturing metrics
+  * newrelic_ignore now blocks all instrumentation collection for
+    the specified actions
+  * added doc to method_tracer API and removed second arg
     requirement for add_method_tracer call
-  * Instrumentation for Net::HTTP
+  * instrumentation for Net::HTTP
     
 v2.9.4
   * Clamp size of data sent to server
